- NEW: Double clicking on a word in TortoiseMerge marks all
       occurrences of that word in all views. (Stefan)
- NEW: Offer automatic update and retry if a commit failed due
       to an outdated working copy (Stefan Fuhrmann)
- NEW: Directly support single file c/o from c/o dialog (Stefan Fuhrmann)
- NEW: Toolbar buttons to change the whitespace diff options in
       TortoiseMerge. (Stefan)
- BUG: Merged revisions must be counted only once in stats (Stefan Fuhrmann)

Version 1.6.7
- BUG: The status cache could segfault in some situations. (Stefan)
- BUG: Memory leak in SubWCRevCOM. (Stefan)
- BUG: The copy-from url in the Check-for-modifications Dialog
       was wrong for single files. (Stefan)

Version 1.6.6
- CHG: Reduced disk access in the status cache. (Stefan)
- BUG: The /url parameter was ignored for import commands. (Stefan)
- BUG: Some project properites were not automatically added
       to newly added folders. (Stefan)
- BUG: Resolving tree conflicts resulted in an error message. (Stefan)
- BUG: Under rare conditions, missing data would not be added
       to the log cache. (Stefan Fuhrmann)
- BUG: right-dragging added files was not possible. (Stefan)
- BUG: The menu verbs were language dependent. (Stefan)

Version 1.6.5
- BUG: fixed access to freed memory which could crash
       the 'resolve' command. (Stefan)
- BUG: Y coordinate in log statistics graph Repository had 
       inconsistent scaling. (Stefan Fuhrmann)
- BUG: the ssl certificate files weren't saved. (Stefan)
- BUG: The language for the dialogs was always in English on
       Win7 even if a language pack was installed and the
       language setting changed. (Stefan)
- BUG: Merging from an url which was renamed/deleted didn't work. (Stefan)
- BUG: The webviewer wasn't properly started from the lower pane
       in the log dialog for relative urls. (Stefan)

Version 1.6.4
- CHG: Improved startup performance of the log cache. (Stefan)